--- a/configs/config.json
+++ b/configs/config.json
@@ -14,7 +14,7 @@
 			"host": "localhost",
 			"port": 3306,
 			"user": "root",
-			"password": "",
+			"password": "@rjun9910",
 			"database": "winzify"
 		}
 	}
